# example_pybind

./: CMakeLists.txt  example.cpp  examplepyth.py  readme.md  setup.py
cmake/: FindNumpy.cmake
